--- a/.github/workflows /python-ci.yml
+++ b/.github/workflows /python-ci.yml
@@ -27,4 +27,4 @@ jobs:
 
     - name: Rodar testes unitários
       run: |
-        python -m unittest discover -s . -p "*utils.py"
+        python -m unittest discover -s . -p "math.utils.py"
